<?xml version="1.0"?>
<package format="2">
  <name>sync_params</name>
  <version>1.0.0</version>
  <description>The sync_params package</description>

  <maintainer email="nick.dave.sullivan@gmail.com">Nick Sullivan</maintainer>
  <author     email="nick.dave.sullivan@gmail.com">Nick Sullivan</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

</package>
